--- a/static/dark.css
+++ b/static/dark.css
@@ -114,11 +114,11 @@ body.dark-mode .top-dark-mode-button:after {
 }
 
 body.dark-mode .dark-toggle {
-    background: rgb(67,183,255);
-    background: -o-linear-gradient(left, rgba(67,183,255,1) 0%, rgba(0,221,246,1) 100%);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(67,183,255,1)), to(rgba(0,221,246,1)));
-    background: linear-gradient(90deg, rgba(67,183,255,1) 0%, rgba(0,221,246,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#43b7ff",endColorstr="#00ddf6",GradientType=1);
+    background: rgb(67, 183, 255);
+    background: -o-linear-gradient(left, rgba(67, 183, 255, 1) 0%, rgba(0, 221, 246, 1) 100%);
+    background: -webkit-gradient(linear, left top, right top, from(rgba(67, 183, 255, 1)), to(rgba(0, 221, 246, 1)));
+    background: linear-gradient(90deg, rgba(67, 183, 255, 1) 0%, rgba(0, 221, 246, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#43b7ff", endColorstr="#00ddf6", GradientType=1);
     border: none;
 }
 
@@ -132,8 +132,8 @@ body.dark-mode .dark-toggle {
     -webkit-transition: .3s ease;
     -o-transition: .3s ease;
     transition: .3s ease;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 body.dark-mode .dark-toggle span {
@@ -158,4 +158,14 @@ body.dark-mode {
 
 body.dark-mode p {
     color: #fff
+}
+
+h1.dark-mode {
+    color: #fff;
+}
+
+
+button.dark-mode {
+    background-color: #555;
+    color: #fff;
 }
